--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "35-color B Cell + Myeloid Panel: Iteration 4"
 author: "John Bianchi Colangeli, Kelly Lundsten, Fanuel Messaggio, Andrew Patentrager"
-date: "July 2025"
+date: "July 2025 push test"
 output: 
   html_document:
     toc: true
