--- a/index.Rmd
+++ b/index.Rmd
@@ -6,7 +6,7 @@ output:
   html_document:
     toc: true
     toc_float: 
-      collapsed: false
+      collapsed: true
     number_sections: false
 ---
 
