--- a/index.Rmd
+++ b/index.Rmd
@@ -160,7 +160,7 @@ All spectral controls are beads except for Viakrome808 (viability) and R720-IgA 
 
 A complete copy of the unmixing experiment (.xitsp file + .fcs file directory with control files can be found [here](https://app.box.com/folder/334368687874))
 
-###Unmixed .fcs files
+### Unmixed .fcs files
 
 [FCS files: Unmixed FMMS, mini-panels, full stains, unstained for healthy and CLL](https://app.box.com/folder/333247578556)
 
@@ -190,7 +190,7 @@ A complete copy of the unmixing experiment (.xitsp file + .fcs file directory wi
 
 ![](images/CLL_markers_on_CD19pos_CLL.png)
 
-### Matrix #002 beads-only,cleaned {.tabset}
+## Matrix #002 beads-only,cleaned {.tabset}
 
 Description and files
 
@@ -198,11 +198,11 @@ Cleaned all-bead matrix (except viakrome80 8-viability and R720-IgA). Each bead 
 
 [Link to the cloned unmixing experiment with spectral unmixing details PDF](https://app.box.com/folder/335882732501)
 
-### Matrix #003 - Cells only, added AF parameter
+## Matrix #003 - Cells only, added AF parameter
 
 003 is entirely cell controls. When I unmixed unstained cells with the first version of this matrix, I noticed separate, distinct, AF-driven populations appearing positive in the UV channels. I went back and added an AF parameter (unstained_2) by gating on monocytes and assigning U7 as the primary detector. Unstained cells, the main negative control, was assigned B3 and gated on small lymphocytes, and was insufficient at unmixing monocyte derived AF. Unstained 1 and unstained 2 have similar but different signatures. The false positives went away after that. 
 
-##$ Matrix #004 - Hybrid with AF
+## Matrix #004 - Hybrid with AF
 
 First iteration of a hybrid matrix starting with beads only (002) with added AF parameters from #003, and building from there. 
 If a fluor was unmixed better with cells in 003, I replaced the bead file with the cell file. 
@@ -216,7 +216,6 @@ swapped for cells
 BUV496
 BV421
     
-
 # OMIP {.tabset}
 
 Place to store data we need for OMIP
