--- a/index.Rmd
+++ b/index.Rmd
@@ -6,7 +6,7 @@ output:
   html_document:
     toc: true
     toc_float: 
-      collapsed: false
+      collapsed: true
     number_sections: false
 ---
 
@@ -153,7 +153,7 @@ green = good
 yellow = better but not great
 
 
-## Unmixing Matrix #001 - Beads-only
+## Matrix #001 - Beads-only
 First attempt.
 
 All spectral controls are beads except for Viakrome808 (viability) and R720-IgA (very few positive events possibly due to this clone not binding to beads)
